--- a/ui/exchange-rates/package.json
+++ b/ui/exchange-rates/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "@ng-select/ng-select": "^8.3.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "flag-icons": "^6.5.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
